# FordWBC.jl

./: .gitignore  Manifest.toml  Project.toml  README.md
src/: FordWBC.jl  kinofabrics.jl  lowlevel.jl  types.jl  utils.jl
src/comms/: sub_poses.jl
src/comms/lcm/: subposearray.jl
src/comms/ros/ws/src/subpub/: CMakeLists.txt
src/comms/ros/ws/src/subpub/include/subpub/: subpub.hpp
src/comms/ros/ws/src/subpub/msg/: SceneObject.msg
src/comms/ros/ws/src/subpub/scripts/: pose_publisher.py
src/comms/ros/ws/src/subpub/src/: main.cpp  subpub.cpp
src/comms/ros/ws/src/yolo_seg_network/: CMakeLists.txt  package.xml
src/sim/: MUJOCO_LOG.TXT  run_table.sh  set_operation_mode.py
test/: runtests.jl  scene_estimation.json
test/physical/: test_get_poses.jl  test_kinofab.jl  test_mobile_manipulation.jl  test_perception_manipulation.jl  tune_standing.jl  tune_walking.jl
test/sim/: read_scene_estimate.jl  test_mobile_manipulation.jl
